k8s/auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: auth
  template:
    metadata:
      labels:
        component: auth
    spec:
      containers:
        - name: auth
          image: zakiafada32/sc-auth:0.5
          ports:
            - containerPort: 3000
