k8s/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mongo-db
  ports:
    - name: mongo-db
      protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mongo-db
  template:
    metadata:
      labels:
        component: mongo-db
    spec:
      containers:
        - name: mongo-db
          image: mongo
          ports:
            - containerPort: 27017
