k8s/users.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: users
  ports:
    - name: users
      protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: users
  template:
    metadata:
      labels:
        component: users
    spec:
      containers:
        - name: users
          image: zakiafada32/sc-users:0.1
          ports:
            - containerPort: 4000
