k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/auth/?(.*)
            backend:
              serviceName: auth-cluster-ip-service
              servicePort: 3000
          - path: /api/v1/users/?(.*)
            backend:
              serviceName: users-cluster-ip-service
              servicePort: 4000
